<resources>
    <string name="app_name">My Application22</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="chat">Chat</string>
    <string name="wishlist">WishList</string>
    <string name="profile">Profile</string>
    <string name="title_activity_bottom">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="press_again_exit_app">Press again to exit</string>

    <string name="settings_file_name">com.app.sample.fchat.temp</string>
    <string name="error_authetication_failed">Authentication failed.</string>
    <string name="error_could_not_connect">Could not connect</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_no_chat">No Chat found</string>
    <string name="title_activity_image_view">ImageView</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>