<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/ride_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history" />

    <item
        android:id="@+id/chat_history"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />

    <item
        android:id="@+id/wishlist"
        android:icon="@drawable/wishlist"
        android:title="@string/wishlist" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>